New frames on slidedeck

--- a/docs/slidedeck/slidedeck1.tex
+++ b/docs/slidedeck/slidedeck1.tex
@@ -22,7 +22,7 @@
   \item O grze
   \item Architektura
   \item Implementacja
-  \item Plany
+  \item Metodyka pracy
   \item Informacje
   \end{itemize}
 \end{frame}
@@ -43,10 +43,43 @@
 % frame
 \begin{frame}
 \begin{figure}[ht]
-
+\frametitle{O grze}
 \includegraphics[scale=0.4]{cs2d.jpg}
 \label{cs2d}
 \caption{\href{http://www.unrealsoftware.de}{http://www.unrealsoftware.de}}
 \end{figure}
 \end{frame}
+% frame
+\begin{frame}
+
+\frametitle{Architektura}
+\begin{itemize}
+\item Klient - Serwer
+\item Obliczenia/przechowywanie stanu odbywa się na serwerze
+\item Klient traktowany jako 'płótno' interpretujący dane z serwera i rysujący je
+\item Serwer - Wielowątkową, zoptymalizowana maszyneria \\
+ (made with secret alien technology)
+\item Klient - Innowacyjna, responsywna, wykorzystująca HTML5 aplikacja, działająca wszędzie
+tam gdzie można uruchomić przeglądarkę
+\end{itemize}
+
+\begin{figure}
+   \centering
+      \includegraphics[scale=0.2]{lisp}
+      \includegraphics[scale=0.125]{html5}
+\end{figure}
+\end{frame}
+
+\begin{frame}
+\frametitle{Metodyka pracy}
+\begin{itemize}
+\item Trello - jako oprogramowanie do zarządzania projektem \\
+  \href{https://trello.com/}{https://trello.com/}
+\item GitHub - jako platforma współpracy nad kodem \\
+  \href{https://github.com}{https://github.com}
+\item Git - jako system kontroli wersji \\
+  \href{http://git-scm.com/}{http://git-scm.com/}
+\end{itemize}
+\end{frame}
+
 \end{document}
