--- a/docs/slidedeck/slidedeck1.tex
+++ b/docs/slidedeck/slidedeck1.tex
@@ -21,9 +21,8 @@
   \begin{itemize}
   \item O grze
   \item Architektura
-  \item Implementacja
-  \item Metodyka pracy
-  \item Informacje
+  \item Narzędzia wspierania pracy
+  \item Q\&A
   \end{itemize}
 \end{frame}
 
@@ -71,7 +70,7 @@ tam gdzie można uruchomić przeglądarkę
 \end{frame}
 
 \begin{frame}
-\frametitle{Metodyka pracy}
+\frametitle{Narzędzia wspierania pracy}
 \begin{itemize}
 \item Trello - jako oprogramowanie do zarządzania projektem \\
   \href{https://trello.com/}{https://trello.com/}
@@ -80,6 +79,10 @@ tam gdzie można uruchomić przeglądarkę
 \item Git - jako system kontroli wersji \\
   \href{http://git-scm.com/}{http://git-scm.com/}
 \end{itemize}
+\end{frame}
+
+\begin{frame}
+\frametitle{Q\&A}
 \end{frame}
 
 \end{document}
