--- a/docs/slidedeck/slidedeck1.tex
+++ b/docs/slidedeck/slidedeck1.tex
@@ -34,8 +34,8 @@
     \item Drużyny zaczynają na przeciwległych końcach mapy
     \item Mapy są symetryczne - zapewnia to zbalansowanie
           szans na poziomie architektury gry
-    \item Na mapie losowo pojawiają się bonusy (chwilowe przyspieszanie, lepsza broń itp.
-    \item Wygrywa ta drużna, która 'pozbędzie się' wszystkich przeciwników
+    \item Na mapie losowo pojawiają się bonusy (chwilowe przyspieszanie, lepsza broń itp.)
+    \item Wygrywa ta dryużna, która 'pozbędzie się' wszystkich przeciwników
   \end{itemize}
 \end{frame}
 
