--- a/docs/slidedeck/slidedeck1.tex
+++ b/docs/slidedeck/slidedeck1.tex
@@ -30,12 +30,13 @@
 \begin{frame}
   \frametitle{O grze}
   \begin{itemize}
-    \item Reguły są proste - dwu wymiarowy DeathMatch
+    \item Reguły są proste - dwuwymiarowy DeathMatch
     \item Drużyny zaczynają na przeciwległych końcach mapy
     \item Mapy są symetryczne - zapewnia to zbalansowanie
           szans na poziomie architektury gry
     \item Na mapie losowo pojawiają się bonusy (chwilowe przyspieszanie, lepsza broń itp.)
-    \item Wygrywa ta dryużna, która 'pozbędzie się' wszystkich przeciwników
+    \item Wygrywa ta druży
+      na, która 'pozbędzie się' wszystkich przeciwników
   \end{itemize}
 \end{frame}
 
