--- a/docs/final-report/goal.tex
+++ b/docs/final-report/goal.tex
@@ -19,13 +19,15 @@ Ze względu na widoczny podział projektu na dwie duże cześci - interfejs uży
 
 \begin{table}[h]
   \centering
-  \begin{tabular}{ |l|c| }
+  \begin{tabular}{ |l|p{8cm}| }
     \hline
     Osoba & Zakres prac i obowiązków \\ \hline
-    Bujok Mikołaj & stuff \\
-    Kubiak Jakub & stuff \\
-    Miękus Szymon & stuff \\
-    Nikodem Adrian & stuff \\
+    Bujok Mikołaj &
+
+    Projektowanie grafiki, praca nad interfejsem użytkownika.\\
+    Kubiak Jakub & Praca nad częścią serwerową,  kordynacja projektu.\\
+    Miękus Szymon & Praca nad animacją interfejsu użytkownika, rozwijanie testów interfejsu użytkownika. \\
+    Nikodem Adrian &  Praca nad częścią serwerową, testy części serwerowej.\\
     \hline
   \end{tabular}
   \caption{Przydział prac poszczególnym członkom zespołu}
