--- a/docs/final-report/model.tex
+++ b/docs/final-report/model.tex
@@ -1,1 +1,19 @@
 \section{Model systemu}
+Gra została zaimplementowana w architekturze klient-serwer. W naszym projekcie klient odpowiada jedynie za wysyłanie rządań do serwera i rysowanie na ekranie, nie jest odpowiedzialny w żadnym stopniu za obliczenia stanu gry. Taki sposób komunikacji całkowicie rozwiązał problem synchronizacji poszczegłólnych klatek ekranu rozsyłanych do graczy. Serwer natomiast odpowiedzialny jest za przechowywanie stanu gry, obliczenia oraz autoryzację i rejestracje użytkowników. Na rysunku \ref{fig:ddiag} przedstawiono diagram wdrożeń zaimplementowanego systemu.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[scale=0.5]{imgs/ddiagram.png}
+    \caption{Diagram wdrożeń zaimplementowanego systemu.}
+    \label{fig:ddiag}
+\end{figure}
+
+Gracz chcący rozpocząć grę w pierwszej kolejności musi udać się pod adres \emph{www} gdzie została umieszczona część kliencka. Interfejs użytkownika pobrany zostanie tylko raz, wszelkie akcje jakie wywołuje użytkownik działają w stu procentach asynchronicznie, nie ma żadnej potrzeby aby odświerzać stronę.
+
+Interfejs użytkownika, poprosi o podanie hasła i nazwy użytkownika w celu uwierzytelniania i przyznania dostępu do gry. Po wybraniu odpowiedniego przycisku przeglądarka połączy się oraz wyśle odpowiedni komunilkat do serwera WebSocket z danymi logowania. Jeżeli dane są niepoprawne, serwer zwróci błąd a w przypadku powodzenia, aplikacja przeniesie nas to części dostępnej dla zalogowanych użytkowników.
+
+Po udanym logowaniu serwer zwróci uniklany identyfikator sesji który będzie identyfikował zapytania przesłane od użytkownika. Klient chcący rozpocząć rozgrywkę może dołączyć do istniejącego kanału lub utworzyć własny.
+
+Kanały utworzone na serwerze są zarządzane przez manager kanałów (\emph{channel manager}), który jest głównym punktem wejścia/wyjścia wszsytkich komunikatów.
+
+Klient, który dołączył do danej rozgrywki, na bieżąco przesyła wszsytkie wydarzenia klawiatury jakie zostaną wygenerowane przez użytkownika, oraz rysuje na ekranie odebrany stan gry.
