final-report work

--- a/docs/final-report/goal.tex
+++ b/docs/final-report/goal.tex
@@ -6,8 +6,8 @@ Przed rozpoczęciem pracy przyjęto, że:
   \item Rozgrywkę można rozpocząć jedynie po uprzedniej rejestracji użytkownika.
   \item Kanały gry mogą być chronione hasłem.
   \item Podczas jednej rozgrywki można jednocześnie grać co najwyżej w szóstkę.
-  \item Interfejs użytkownika zostanie zaimplementowany w postaci asynchronicznej strony WWW z wykorzystaniem technologii HTML5\footnote{http://www.w3.org/TR/html5/} (canvas, WebSockets).
-  \item Część serwerowa (\emph{backend}) zostanie zaimplementowa korzystając z języka \emph{Common Lisp} w implementacji Steel Bank Common Lisp\footnote{http://www.sbcl.org/}.
+  \item Interfejs użytkownika zostanie zaimplementowany w postaci asynchronicznej strony WWW z wykorzystaniem technologii HTML5\footnote{\url{http://www.w3.org/TR/html5/} (canvas, WebSockets).
+  \item Część serwerowa (\emph{backend}) zostanie zaimplementowa korzystając z języka \emph{Common Lisp} w implementacji Steel Bank Common Lisp\footnote{\url{http://www.sbcl.org/}}.
 \end{itemize}
 Dodtkowo, ze względu na ograniczony czas przyjęto, że:
 \begin{itemize}
