--- a/docs/final-report/methodology.tex
+++ b/docs/final-report/methodology.tex
@@ -3,11 +3,10 @@ Podczas pracy nad projektem starano się wykorzystać metody zwinne inżynieri o
 
 Niestety, z powodu na ograniczony czas nie mogliśmy w pełni zastowsować metody scrum. Spotkania dzienne odbywały się z różną częstotliwością, jednak zawsze utrzywaliśmy kontakt poprzez narzędzia pracy zespołowej. Kilkukrotnie starano się wykorzystać programowanie ekstremalne jednak efektywność pracy wzrosła nieznacznie.
 
-%TODO: fix url
 Wcześniej wspomniane narzędzedzia obejowały:
 \begin{itemize}
-  \item Aplikację internetową Trello\footnote{https://trello.com/} -- jak główną platformę wymiany informacji, gromadzenia wiedzy oraz backlog.
-  \item GitHub\footnote{https://github.com/} -- jako platformę wspólnej pracy nad kodem.
+  \item Aplikację internetową Trello\footnote{\url{https://trello.com/}} -- jak główną platformę wymiany informacji, gromadzenia wiedzy oraz backlog.
+  \item GitHub\footnote{\url{https://github.com/}} -- jako platformę wspólnej pracy nad kodem.
   \end{itemize}
 
 Podczas projektowania systemu nie wykorzystano żadnej techniki modelowania. Prace toczyły się na bieżąco i szczególy implementacji poszczególnych części były ustanawiane pomiędzy członkami za nie odpowiedzialnymi (\emph{frontend, backend}).
