--- a/docs/final-report/goal.tex
+++ b/docs/final-report/goal.tex
@@ -1,21 +1,23 @@
 %TODO: fix urls
 \section{Cel i zakres prac}
 Przed rozpoczęciem pracy przyjęto, że:
-\begin{itemize}\itemsep0em
+\begin{itemize}
+\itemsep0em
   \item Gra ma umożliwiać wiele rozgrywek na raz (tzw. kanały gry).
   \item Rozgrywkę można rozpocząć jedynie po uprzedniej rejestracji użytkownika.
   \item Kanały gry mogą być chronione hasłem.
   \item Podczas jednej rozgrywki można jednocześnie grać co najwyżej w szóstkę.
-  \item Interfejs użytkownika zostanie zaimplementowany w postaci asynchronicznej strony WWW z wykorzystaniem technologii HTML5\footnote{\url{http://www.w3.org/TR/html5/} (canvas, WebSockets).
+  \item Interfejs użytkownika zostanie zaimplementowany w postaci asynchronicznej strony WWW z wykorzystaniem technologii HTML5\footnote{\url{http://www.w3.org/TR/html5/}} (canvas, WebSockets).
   \item Część serwerowa (\emph{backend}) zostanie zaimplementowa korzystając z języka \emph{Common Lisp} w implementacji Steel Bank Common Lisp\footnote{\url{http://www.sbcl.org/}}.
 \end{itemize}
+
 Dodtkowo, ze względu na ograniczony czas przyjęto, że:
 \begin{itemize}
   \item W przeciwieństwie do HaxBall, gracze, nie mogą wymieniać się wiadomościami podczas rozgrywki.
   \item Brak tzn. \emph{lobby} czyli poczekalni dla graczy przed ukończeniem rundy - gracz jest umieszczany odrazu w centru rozgrywki.
 \end{itemize}
 
-Ze względu na widoczny podział projektu na dwie duże cześci - interfejs użytkownika(\emph{frontend}) i część serwerową (\emph{backend}) podział prac był dość łatwy. Tabela \ref{tab:podzial} przedstawia przydział prac poszczególnym członką grupy.
+Ze względu na widoczny podział projektu na dwie duże cześci - interfejs użytkownika(\emph{frontend}) i część serwerową (\emph{backend}) podział prac był dość łatwy. Tabela \ref{tab:podzia} przedstawia przydział prac poszczególnym członką grupy.
 
 \begin{table}[h]
   \centering
@@ -31,5 +33,5 @@ Ze względu na widoczny podział projektu na dwie duże cześci - interfejs uży
     \hline
   \end{tabular}
   \caption{Przydział prac poszczególnym członkom zespołu}
-  \label{tab:podzial}
+  \label{tab:podzia}
 \end{table}
